fix tomcat issues