@@ -42,7 +42,7 @@ class CourseRepositoryTest {
     @Test
     void testGet() {
         List<Course> courseList = repository.all();
-        Course course = repository.all().getFirst();
+        Course course = repository.all().get(0);
         assertNotNull(course);
         assertTrue(courseList.contains(course));
     }
@@ -127,7 +127,7 @@ class CourseRepositoryTest {
         // Get initial count
         int initialCount = repository.all().size();
 
-        Course firstCourse = repository.all().getFirst();
+        Course firstCourse = repository.all().get(0);
         repository.delete(firstCourse.getId());
 
         try {
@@ -169,7 +169,7 @@ class CourseRepositoryTest {
     @Test
     void testUpdate() {
         // Get an existing course
-        Course existingCourse = repository.all().getFirst();
+        Course existingCourse = repository.all().get(0);
         long originalId = existingCourse.getId();
 
         // Modify the course
